deploy/charts/templates/service.yaml
# Copyright The Linux Foundation and each contributor to LFX.
# SPDX-License-Identifier: MIT
---
apiVersion: v1
kind: Service
metadata:
  name: query-svc
  namespace: lfx

spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: query-svc
