deploy/charts/templates/ingressroute.yaml
# Copyright The Linux Foundation and each contributor to LFX.
# SPDX-License-Identifier: MIT
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: query-svc
  namespace: lfx
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: >-
        Host(`lfx-api.k8s.orb.local`) && PathPrefix(`/query/`)
      priority: 10
      middlewares:
        - name: heimdall
      services:
        - kind: Service
          name: query-svc
          port: web
